--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -13,4 +13,12 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
+
+.container {
+  max-width: 1110px;
+  width: 100%;
+  margin: 0 auto;
+}
+
